[package]
name = "small-lang"
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "small-lang"
required-features = ["structopt"]

[[bench]]
name = "fibonacci-parse"
harness = false

[[bench]]
name = "fibonacci-check"
harness = false

[[bench]]
name = "fibonacci-run"
harness = false

[dependencies]
lazy_static = "~1"
seahash = "~3"
lalrpop-util = "0.17"
regex = "~1"
iter-set = "0.2.0"
codespan = "0.5.0"
log = "0.4.8"
serde_json = "1.0.41"

[dependencies.structopt]
version = "0.3.3"
optional = true

[dependencies.env_logger]
version = "0.7.1"
optional = true

[dependencies.mlsub]
git = "https://github.com/andrewhickman/mlsub-rs"
rev = "569faf133df7373df3f6d0e51a9fa6a2541097f6"

[dependencies.im]
package = "im-rc"
version = "~13"
features = ["serde"]

[dependencies.serde]
version = "1.0.101"
features = ["derive", "rc"]

[build-dependencies]
lalrpop = "0.17"

[dev-dependencies]
proptest = "0.9.4"
criterion = "0.3.0"
