[package]
name = "small-lang"
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[lib]
bench = false

[[bin]]
name = "small-lang"
required-features = ["structopt", "paw"]

[[bench]]
name = "fibonacci-parse"
harness = false

[[bench]]
name = "fibonacci-check"
harness = false

[[bench]]
name = "fibonacci-run"
harness = false

[profile.release]
debug = true

[features]
default = ["structopt", "paw"]

[dependencies]
seahash = "~3"
lalrpop-util = "0.17"
regex = "~1"
iter-set = "~1"
small-ord-set = "0.1.0"
codespan = "0.5.0"
log = "0.4.8"
serde_json = "1.0.41"
codespan-reporting = "0.5.0"
itertools = "0.8.1"
once_cell = "1.2.0"

[dependencies.paw]
version = "1.0.0"
optional = true

[dependencies.structopt]
version = "0.3.3"
features = ["paw"]
optional = true

[dependencies.env_logger]
version = "0.7.1"
optional = true

[dependencies.mlsub]
git = "https://github.com/andrewhickman/mlsub-rs"
tag = "v0.1.3"

[dependencies.im]
package = "im-rc"
version = "~13"
features = ["serde"]

[dependencies.serde]
version = "1.0.101"
features = ["derive", "rc"]

[dependencies.smallvec]
version = "~1"
features = ["serde"]

[build-dependencies]
lalrpop = "0.17"

[dev-dependencies]
proptest = "0.9.4"
criterion = "0.3.0"
