[package]
name = "small-lang"
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[lib]
bench = false

[[bin]]
name = "small-lang"
required-features = ["structopt", "paw"]

[[bench]]
name = "fibonacci-parse"
harness = false

[[bench]]
name = "fibonacci-check"
harness = false

[[bench]]
name = "fibonacci-run"
harness = false

[profile.release]
debug = true

[features]
default = ["structopt", "paw", "wasm"]
wasm = ["parity-wasm"]

[dependencies]
seahash = "~4"
lalrpop-util = "0.19"
regex = "~1"
iter-set = "~2"
small-ord-set = "0.1.0"
codespan = { version = "0.9.5", features = ["serialization"] }
log = "0.4.8"
serde_json = "1.0.41"
codespan-reporting = "0.9.5"
itertools = "0.9.0"
once_cell = "1.2.0"
parity-wasm = { version = "0.41.0", optional = true }

[dependencies.paw]
version = "1.0.0"
optional = true

[dependencies.structopt]
version = "0.3.3"
features = ["paw"]
optional = true

[dependencies.env_logger]
version = "0.7.1"
optional = true

[dependencies.mlsub]
git = "https://github.com/andrewhickman/mlsub-rs"
tag = "v0.1.8"

[dependencies.im]
package = "im-rc"
version = "~15"
features = ["serde"]

[dependencies.serde]
version = "1.0.101"
features = ["derive", "rc"]

[dependencies.smallvec]
version = "~1"
features = ["serde"]

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
wabt = "0.10.0"

[dev-dependencies]
proptest = "0.10.1"
criterion = "0.3.0"
wasmi = "0.6.2"
wabt = "0.10.0"
